--- a/training.html
+++ b/training.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SDSRP Training</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,24 +13,25 @@
     <div class="container">
         <h2 class="page-title">Next Training Date</h2>
         <div class="date-time">
-            <p style="font-size: 32px; color: #ff6600;">Wednesday, October 25th</p>
+            <p>Wednesday, October 25th</p>
         </div>
         <p class="description">Join us for our next training session and enhance your skills and knowledge. Don't miss this opportunity to learn from industry experts.</p>
-        <form name="contact" method="POST" data-netlify="true">
+        <form name="contact" netlify>
             <input type="hidden" name="form-name" value="contact" />
-            <p>
-                <label>Roblox Username <input type="text" name="roblox-username" required /></label>
-            </p>
-            <p>
+            <div class="form-group">
+                <label for="roblox-username">Roblox Username</label>
+                <input type="text" id="roblox-username" name="roblox-username" placeholder="Enter your Roblox username" required>
+            </div>
+            <div class="form-group">
                 <label>Will you be attending this training date?</label>
-                <input type="checkbox" name="attending-training" value="Yes" id="attending-yes">
-                <label for="attending-yes">Yes</label>
-                <input type="checkbox" name="attending-training" value="No" id="attending-no">
-                <label for="attending-no">No</label>
-            </p>
-            <p>
-                <button type="submit" class="register-button">Submit</button>
-            </p>
+                <div class="checkbox-group">
+                    <input type="checkbox" name="attending-training" value="Yes" id="attending-yes">
+                    <label for="attending-yes">Yes</label>
+                    <input type="checkbox" name="attending-training" value="No" id="attending-no">
+                    <label for="attending-no">No</label>
+                </div>
+            </div>
+            <button type="submit" class="register-button">Submit</button>
         </form>
     </div>
     <footer>
