--- a/training.html
+++ b/training.html
@@ -15,7 +15,7 @@
         <div class="date-time">
             <p>Wednesday, October 25th</p>
         </div>
-        <p class="description">Join us for our next training session and enhance your skills and knowledge. Don't miss this opportunity to learn from industry experts.</p>
+        <p class="description">Join our training now! The sooner you join, the sooner you will be able to be a full member of our SDSRP Management Team!</p>
         <form name="contact" netlify>
             <input type="hidden" name="form-name" value="contact" />
             <div class="form-group">
