--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p>Wednesday, October 25th</p>
         </div>
         <p class="description">Join our training now! The sooner you join, the sooner you will be able to be a full member of our SDSRP Management Team!</p>
-        <form name="contact" netlify>
+        <form name="training" netlify>
             <input type="hidden" name="form-name" value="contact" />
             <div class="form-group">
                 <label for="roblox-username">Roblox Username</label>
