--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h2 class="page-title">Next Training Date</h2>
         <div class="date-time">
-            <p>Wednesday, October 25th</p>
+            <p>November 5th 2023</p>
         </div>
         <p class="description">Join our training now! The sooner you join, the sooner you will be able to be a full member of our SDSRP Management Team!</p>
         <form name="training" netlify>
