--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="date-time">
             <p>Today, 12 PM EST time</p>
         </div>
+        <div class="date-time">
+            <p>Trainer: smileverymile</p>
+        </div>
         <p class="description">Join our training now! The sooner you join, the sooner you will be able to be a full member of our SDSRP Management Team!</p>
         <form name="training" netlify>
             <input type="hidden" name="form-name" value="contact" />
