--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h2 class="page-title">Next Training Date</h2>
         <div class="date-time">
-            <p>Today, 12 PM EST time</p>
+            <p>November 5th, 12 PM EST time</p>
         </div>
         <div class="date-time">
             <p>Trainer: smileverymile</p>
