--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <p>Trainer: smileverymile</p>
         </div>
         <p class="description">Join our training now! The sooner you join, the sooner you will be able to be a full member of our SDSRP Management Team!</p>
+        <p class="description">You are REQUIRED to finish all of these courses in order to successfully apply for the in-game training <a href="https://course.sdsrp.com" target="_blank">Finish Courses</a></p>
+
         <form name="training" netlify>
             <input type="hidden" name="form-name" value="contact" />
             <div class="form-group">
